# GeneSnap-Workbench

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: ARCHITECTURE.md  V0.3.3问题修复报告.md  发布与版本管理.md
packaging/: GeneSnapWorkbench.iss  README_打包与验收.md  README_用户使用.md  build_installer.ps1  build_windows.ps1  generate_windows_icon.py  genesnap_workbench.spec
tests/: test_addon_sequencing.py  test_app_identity.py  test_application_service.py  test_application_settings.py  test_broad_gpp.py  test_business_calendar.py  test_desktop_ui.py  test_expression_application.py  test_expression_engine.py  test_expression_exports.py  test_expression_persistence.py  test_expression_profile_store.py  test_expression_protocol_import.py  test_expression_sequencing.py  test_expression_vector_protocol.py  test_genbank_io.py  test_molecular_project_workflow.py  test_ncbi_blast.py  test_ncbi_transcripts.py  test_packaged_smoke.py  test_packaging_configuration.py  test_project_interruption.py  test_project_visibility.py  test_public_vector_resources.py  test_reporter_application.py  test_reporter_engine.py  test_reporter_exports.py  test_reporter_profile_store.py  test_reporter_vector_protocol.py  test_sequencing_submissions.py  test_shrna_analysis_service.py  test_shrna_application.py  test_shrna_candidate_generator.py  test_shrna_design.py  test_shrna_exports.py  test_shrna_models.py  test_shrna_online_design.py  test_shrna_persistence.py  test_shrna_sequencing.py  (+18 more)
(+76 files in other folders)
